--- a/stories.html
+++ b/stories.html
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="shchadyashchee-ochishchenie-pecheni" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82794700_489372655346938_5764641459344035352_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=5mMH_o74Ik4AX83FYXb&oh=eace0cb0d89d067c1c733068280872f6&oe=5ED1A9B2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="rozmarinxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479765_1588120768007435_786353247178807367_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=oAKffp6PQtUAX_48QfS&oh=da832ff92b6f8b7213b0f5764bd3f523&oe=5EC7CA63" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОЗМАРИН 🌟🌿">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479765_1588120768007435_786353247178807367_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=747GkMnv0LkAX8j-9G4&oh=2f7237d4e241ee65034cccd10ea1f105&oe=5EC7CA63" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОЗМАРИН 🌟🌿">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kak-spravit-sya-so-streptokokkom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=4HC8D5AjkxwAX8dUVGO&oh=2d0fb08212a5cf013678923d52e285a3&oe=5ECB60A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=whN-WhyDKsYAX8hN_jd&oh=cd4e0b6e86cbafb481f7732e73ebcb7c&oe=5ECB60A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhivaya-vodaxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=1hMTRsxqZHwAX_M6UWV&oh=3ece2faf19af38539fc9ad4641684003&oe=5EBBAD3F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИВАЯ ВОДА ☔️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=1hMTRsxqZHwAX_M6UWV&oh=6ace30f9759c9243acd846471df92b89&oe=5EE33A3F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИВАЯ ВОДА ☔️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kak-podnyat--vitamin-d" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=hNzQ78K1aFgAX-eGCx1&oh=eeec57a7636ff6f45f6a3187019bc3de&oe=5ED53384" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=VAEn8uG45j0AX-cT9KJ&oh=5b3530434cc56337886c6a473678e464&oe=5EFCC084" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chto-zhe-bylo-s-moey-kozhey" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=1dMO8YgJMo0AX8vcQF8&oh=c9660f253a6c777adb460ae527990c11&oe=5EFD6FD8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=WfNdVB6San0AX9kL6uf&oh=465f43fa5961a3879421d8dbaf9fe0e0&oe=5EFD6FD8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894115_492068188178295_8586066112610881889_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=i6_zANDBeRUAX_D2EH_&oh=827114ca2af385610a46a88486d73ab5&oe=5EC543D7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894115_492068188178295_8586066112610881889_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=hQA0wjMjBBQAX-vr_S2&oh=0d6af67300c4f0727822b6e8ea4c40ca&oe=5EC543D7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx-2" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83528892_613291186070275_731161388949015759_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=7YDpCOn-aNQAX8p7N5p&oh=13303d95bb79b001257a6d683d8c7255&oe=5EBC6599" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83528892_613291186070275_731161388949015759_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=LjidvKwW2lYAX-N3jtd&oh=8be73ba4d412d1b097bdfdbc78a18ee5&oe=5EE3F299" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +238,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriya-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=SBK4vi0Gr4MAX_wp9OG&oh=ad012845b2f7bcfb8df310238dab6df4&oe=5EC45AEC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=bjFBSPIqUgEAX9BWPjf&oh=8065ec573b5618e244d2d210b1725592&oe=5EC45AEC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ya-eshchyo-ne-zakonchila-svoyu-istoriyu-i-v-prodolzhenii" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83649310_2553776714870657_5010740970539343404_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=AVFFTjkzwOcAX_A-LtV&oh=d5e5880cf646ae2a36c2acfa3b17672d&oe=5ED44A3E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я ещё не закончила свою историю и в продолжении">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83649310_2553776714870657_5010740970539343404_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=AVFFTjkzwOcAX_A-LtV&oh=751df5d83ec5d1bb5aaeb76060279049&oe=5EFBD73E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я ещё не закончила свою историю и в продолжении">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -268,17 +278,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx-6" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83635925_126519612200644_455381365454284509_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=-PAVzeR3vy0AX9ivJkx&oh=e968cdc14ba1ba067191fe0db86bc622&oe=5ECA244D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriyaxxxxx-7" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83883802_578192936095585_7230772308895580877_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=O_YH7cEUCusAX_4FwG8&oh=d6fcc77e2b27609fd0ff48ba576c658c&oe=5F009023" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83635925_126519612200644_455381365454284509_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=DTMbZnPUDFwAX9PTZHE&oh=e7155a0ed2fed6a45d9248174c96202a&oe=5ECA244D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
