--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=-9XmDHU8CkwAX-PtCw2&oh=2c48e795c3d60a720170266f03a35e8e&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=pqMbmeX4tK0AX_EkRta&oh=e95d09d6e475971d07554a714d00b0ec&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,6 +106,26 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="klubnichno-bananovyy-khleb-xx-xx--bez-glyutenax-bez-moloka" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=l9wT1F3C9ugAX826jAQ&oh=8e798ab502f678fc7181f34ede4cf99c&oe=5ECBF342" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="post-dlya-pozdravleniy-xxxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84535996_613799325866220_4685678880727796920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=-MCubAILYI8AX8vId9d&oh=54ef5e7053488cd581e090769aaad91a&oe=5ECE9B92" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОСТ ДЛЯ ПОЗДРАВЛЕНИЙ 🥳😍">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="shchadyashchee-ochishchenie-pecheni" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82794700_489372655346938_5764641459344035352_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=5mMH_o74Ik4AX83FYXb&oh=eace0cb0d89d067c1c733068280872f6&oe=5ED1A9B2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ">
@@ -138,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="superbakteriya-streptokokk" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=PKm9D15sNKAAX_FGZZc&oh=7e41b49507db22311b46688a94e45598&oe=5EC3F524" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=axhO1KpzMX8AX_xNbaL&oh=6ad6c878968ea2ad8258745f41bf36d1&oe=5EC3F524" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +168,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhivaya-vodaxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=1hMTRsxqZHwAX_M6UWV&oh=6ace30f9759c9243acd846471df92b89&oe=5EE33A3F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИВАЯ ВОДА ☔️">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=1IJQb6gHFTEAX96frGq&oh=62ef3df3bb63070af8d8af072afcebdf&oe=5EE33A3F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЖИВАЯ ВОДА ☔️">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -168,7 +188,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="x-ya-iskrenne-khochu-pomoch--temx-kto-gotov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83710710_620442751869359_3671035307006470513_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=oE02UINhz0gAX8XzO6j&oh=c6dc451c7e282e18e3aaea57a88c8781&oe=5EFEDB9D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✨ Я искренне хочу помочь тем, кто готов">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83710710_620442751869359_3671035307006470513_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=VeEy162ds5MAX-fmAYg&oh=af499002ecb8912f2159e37c2ddecdf0&oe=5EFEDB9D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✨ Я искренне хочу помочь тем, кто готов">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -178,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="3-sostavlyayushchie-antivirusnogo-pitaniyaxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=TJaHcKZpWf0AX8t1A8M&oh=cb7d3cc3fe74e623020c56a53bea959f&oe=5EE0F9F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=W-CHHv1NLyAAX_CARVS&oh=713fab182109b57d7d6834ce7adfec52&oe=5EE0F9F0" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx-1" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83456024_614531995789275_8962127920986392734_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=Lu_5LSaHWVwAX_ocslT&oh=d72d5224db59e8ed6dfe2cded27cdfe2&oe=5EE2A51C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83456024_614531995789275_8962127920986392734_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=PqeQSUr5t3IAX9XBmm1&oh=2280b62636a0470523f1a7a4b2e920ea&oe=5EE2A51C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -228,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx-3" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83973399_2769495349805057_2802406441781033650_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=3A3QHLWjLqsAX99QpcA&oh=1afdb51091b747a169f175139d762a48&oe=5ECFF794" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83973399_2769495349805057_2802406441781033650_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=DNQbLUj2hY0AX-3Ip8q&oh=a4a1e6ece10235e3da937c4eec0ce560&oe=5ECFF794" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -248,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="ya-eshchyo-ne-zakonchila-svoyu-istoriyu-i-v-prodolzhenii" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83649310_2553776714870657_5010740970539343404_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=AVFFTjkzwOcAX_A-LtV&oh=751df5d83ec5d1bb5aaeb76060279049&oe=5EFBD73E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я ещё не закончила свою историю и в продолжении">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83649310_2553776714870657_5010740970539343404_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tmutXjAww8YAX9tup0N&oh=38f4fd6d0bb11ce350cf7be523b10ca2&oe=5EFBD73E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я ещё не закончила свою историю и в продолжении">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -259,26 +279,6 @@
 							<input id="moya-istoriyaxxxxx-4" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479771_492275551473563_593260692510337045_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=wqtUKe5nyVIAX_n-AwM&oh=ec4cb4aef9f648d01fcf30e2876f9db7&oe=5ECF2ABD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriyaxxxxx-5" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82387033_192369958634428_844623154663314913_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=PL22N5bZXXsAX_HoKkO&oh=67125611b265b8e21097bdd50c35b5cb&oe=5EC595B2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriyaxxxxx-6" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83635925_126519612200644_455381365454284509_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=DTMbZnPUDFwAX9PTZHE&oh=e7155a0ed2fed6a45d9248174c96202a&oe=5ECA244D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
