--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="anishapo личное celery">
-    <meta name="keywords" content="anishapo личное celery" />
+    <meta name="description" content="anishapo личное celery взаимнаязабота">
+    <meta name="keywords" content="anishapo личное celery взаимнаязабота" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="anishapo личное celery" />
+    <meta property="og:description" content="anishapo личное celery взаимнаязабота" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=-9XmDHU8CkwAX-PtCw2&oh=2c48e795c3d60a720170266f03a35e8e&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=pqMbmeX4tK0AX_EkRta&oh=e95d09d6e475971d07554a714d00b0ec&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -96,6 +96,14 @@
 									<a href="./tags/./anishapo-celery.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-celery.png);"></div>
 										<div class="stories__slide-txt" style="">anishapo celery</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="anishapo взаимнаязабота">
+									<a href="./tags/./anishapo-vzaimnayazabota.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-vzaimnayazabota.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo взаимнаязабота</div>
 									</a>
 								</div>
 							</div>
@@ -135,9 +143,9 @@
 								<a href="./posts/./3-sostavlyayushchie-antivirusnogo-pitaniyaxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1774</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1775</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=TJaHcKZpWf0AX8t1A8M&oh=cb7d3cc3fe74e623020c56a53bea959f&oe=5EE0F9F0" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=W-CHHv1NLyAAX_CARVS&oh=713fab182109b57d7d6834ce7adfec52&oe=5EE0F9F0" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
 									</div>
 									<div class="article-more__item-name" style="
 ">3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎</div>
@@ -145,7 +153,7 @@
 								<a href="./posts/./kak-spravit-sya-so-streptokokkom.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1579</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1592</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=whN-WhyDKsYAX8hN_jd&oh=cd4e0b6e86cbafb481f7732e73ebcb7c&oe=5ECB60A6" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
 									</div>
@@ -155,7 +163,7 @@
 								<a href="./posts/./kak-podnyat--vitamin-d.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1344</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1351</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=VAEn8uG45j0AX-cT9KJ&oh=5b3530434cc56337886c6a473678e464&oe=5EFCC084" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
 									</div>
@@ -165,9 +173,9 @@
 								<a href="./posts/./superbakteriya-streptokokk.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1288</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1294</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=PKm9D15sNKAAX_FGZZc&oh=7e41b49507db22311b46688a94e45598&oe=5EC3F524" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=axhO1KpzMX8AX_xNbaL&oh=6ad6c878968ea2ad8258745f41bf36d1&oe=5EC3F524" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
 									</div>
 									<div class="article-more__item-name" style="
 ">СУПЕРБАКТЕРИЯ СТРЕПТОКОКК</div>
@@ -175,7 +183,7 @@
 								<a href="./posts/./chto-zhe-bylo-s-moey-kozhey.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1236</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1238</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=WfNdVB6San0AX9kL6uf&oh=465f43fa5961a3879421d8dbaf9fe0e0&oe=5EFD6FD8" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
 									</div>
@@ -185,32 +193,32 @@
 								<a href="./posts/./moya-istoriyaxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1167</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1169</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894115_492068188178295_8586066112610881889_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=hQA0wjMjBBQAX-vr_S2&oh=0d6af67300c4f0727822b6e8ea4c40ca&oe=5EC543D7" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
-								<a href="./posts/./moya-istoriyaxxxxx-2.html" class="article-more__item">
+								<a href="./posts/./zhivaya-vodaxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1160</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>938</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83528892_613291186070275_731161388949015759_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=LjidvKwW2lYAX-N3jtd&oh=8be73ba4d412d1b097bdfdbc78a18ee5&oe=5EE3F299" alt="МОЯ ИСТОРИЯ ❤️🌱">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=1IJQb6gHFTEAX96frGq&oh=62ef3df3bb63070af8d8af072afcebdf&oe=5EE33A3F" alt="ЖИВАЯ ВОДА ☔️">
 									</div>
 									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ ❤️🌱</div>
+">ЖИВАЯ ВОДА ☔️</div>
 								</a>
-								<a href="./posts/./moya-istoriyaxxxxx-1.html" class="article-more__item">
+								<a href="./posts/./shchadyashchee-ochishchenie-pecheni.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1084</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>827</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83456024_614531995789275_8962127920986392734_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=Lu_5LSaHWVwAX_ocslT&oh=d72d5224db59e8ed6dfe2cded27cdfe2&oe=5EE2A51C" alt="МОЯ ИСТОРИЯ ❤️🌱">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82794700_489372655346938_5764641459344035352_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=5mMH_o74Ik4AX83FYXb&oh=eace0cb0d89d067c1c733068280872f6&oe=5ED1A9B2" alt="ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ">
 									</div>
 									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ ❤️🌱</div>
+">ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ</div>
 								</a>
 							</div>
 						</div>
