--- a/stories.html
+++ b/stories.html
@@ -106,6 +106,16 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="bananovyy-fosterxxxxx" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=mQjdAqDaVjkAX_SY19N&oh=288769ed36b74629211d6908f9c1a1b8&oe=5E4C1AB6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="klubnichno-bananovyy-khleb-xx-xx--bez-glyutenax-bez-moloka" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=K0G-ojw1q8QAX9WrbOE&oh=99ae25c2e20ab96ed043585b0f4808e1&oe=5ECBF342" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
@@ -118,7 +128,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="post-dlya-pozdravleniy-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84535996_613799325866220_4685678880727796920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=-MCubAILYI8AX8vId9d&oh=54ef5e7053488cd581e090769aaad91a&oe=5ECE9B92" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОСТ ДЛЯ ПОЗДРАВЛЕНИЙ 🥳😍">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84535996_613799325866220_4685678880727796920_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=L9mTkZe0MmoAX-5uS-r&oh=32c30e4087614d7b4eb0a043ee969c9a&oe=5ECE9B92" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПОСТ ДЛЯ ПОЗДРАВЛЕНИЙ 🥳😍">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -138,7 +148,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="rozmarinxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479765_1588120768007435_786353247178807367_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=747GkMnv0LkAX8j-9G4&oh=2f7237d4e241ee65034cccd10ea1f105&oe=5EC7CA63" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОЗМАРИН 🌟🌿">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479765_1588120768007435_786353247178807367_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=clYSTUdZqSoAX9HUNGp&oh=a01f745f39efd35e2f2259b085cc70e9&oe=5EC7CA63" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="РОЗМАРИН 🌟🌿">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -148,7 +158,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kak-spravit-sya-so-streptokokkom" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=whN-WhyDKsYAX8hN_jd&oh=cd4e0b6e86cbafb481f7732e73ebcb7c&oe=5ECB60A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=rf9DPIDPCeQAX_fKzyX&oh=3c9db2f3a6015d893bcc75e64827eb7d&oe=5ECB60A6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -208,7 +218,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="chto-zhe-bylo-s-moey-kozhey" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=WfNdVB6San0AX9kL6uf&oh=465f43fa5961a3879421d8dbaf9fe0e0&oe=5EFD6FD8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=0pJXyKQQVUYAX9D0nHg&oh=a9eac7d82fbe308a1f33202b502a8f70&oe=5EFD6FD8" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -218,7 +228,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894115_492068188178295_8586066112610881889_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=hQA0wjMjBBQAX-vr_S2&oh=0d6af67300c4f0727822b6e8ea4c40ca&oe=5EC543D7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894115_492068188178295_8586066112610881889_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=WaMSvweqHNoAX-bEARF&oh=14c4c956b2f77a68411b5e4a19085c66&oe=5EC543D7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -238,7 +248,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx-2" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83528892_613291186070275_731161388949015759_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=LjidvKwW2lYAX-N3jtd&oh=8be73ba4d412d1b097bdfdbc78a18ee5&oe=5EE3F299" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83528892_613291186070275_731161388949015759_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=w4ShqQNmDJQAX9sq6po&oh=c62ad701d300457f253c8bdd43e0a98e&oe=5EE3F299" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriya-xxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=bjFBSPIqUgEAX9BWPjf&oh=8065ec573b5618e244d2d210b1725592&oe=5EC45AEC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=EZSsGa35AiQAX9vNLUP&oh=9aa4271000e0433ed1593994b10e1a0c&oe=5EC45AEC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="ya-eshchyo-ne-zakonchila-svoyu-istoriyu-i-v-prodolzhenii" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83649310_2553776714870657_5010740970539343404_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tmutXjAww8YAX9tup0N&oh=38f4fd6d0bb11ce350cf7be523b10ca2&oe=5EFBD73E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я ещё не закончила свою историю и в продолжении">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="moya-istoriyaxxxxx-4" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479771_492275551473563_593260692510337045_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=LuySFfy-FkEAX-78P-O&oh=415b0c74a958e120b1893537c3c83c19&oe=5ECF2ABD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
