--- a/stories.html
+++ b/stories.html
@@ -61,7 +61,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=pqMbmeX4tK0AX_EkRta&oh=e95d09d6e475971d07554a714d00b0ec&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=2py0zJfQ9iQAX9hWgdl&oh=7d4b30c921dbadc8335688964920ed0c&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени" /></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</div>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -106,9 +106,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="pishchevye-drozhzhi-x-nutritional" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84347677_2665354757084113_8900968863076313356_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=3I1CUnfVB1gAX_RyHhn&oh=4d6e9ae33c45bb3e63cfbc46e91e887d&oe=5EC82015" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="ПИЩЕВЫЕ ДРОЖЖИ / NUTRITIONAL">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="bananovyy-fosterxxxxx" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=mQjdAqDaVjkAX_SY19N&oh=288769ed36b74629211d6908f9c1a1b8&oe=5E4C1AB6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/84527682_523212601634119_727722475270664273_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=mQjdAqDaVjkAX_SY19N&oh=1e7d13fffe03ce2fc708c3a3a4a197c8&oe=5E4D6C36" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="БАНАНОВЫЙ ФОСТЕР 🍌🤩">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -188,7 +198,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="kak-podnyat--vitamin-d" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=VAEn8uG45j0AX-cT9KJ&oh=5b3530434cc56337886c6a473678e464&oe=5EFCC084" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=DLV1DjiOWAwAX_ANeQX&oh=d5436c802253a0cc6cf6f5bb7d0de6d4&oe=5EFCC084" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -198,7 +208,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="x-ya-iskrenne-khochu-pomoch--temx-kto-gotov" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83710710_620442751869359_3671035307006470513_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=VeEy162ds5MAX-fmAYg&oh=af499002ecb8912f2159e37c2ddecdf0&oe=5EFEDB9D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✨ Я искренне хочу помочь тем, кто готов">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83710710_620442751869359_3671035307006470513_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=VkYifqMbJ5AAX8vbXcb&oh=fbfc3c8e8012eb07f667380d86d1b6ca&oe=5EFEDB9D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✨ Я искренне хочу помочь тем, кто готов">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -258,7 +268,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="moya-istoriyaxxxxx-3" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83973399_2769495349805057_2802406441781033650_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=DNQbLUj2hY0AX-3Ip8q&oh=a4a1e6ece10235e3da937c4eec0ce560&oe=5ECFF794" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83973399_2769495349805057_2802406441781033650_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=yuyNKPnsS6gAX-dOvPl&oh=bb14513966219909c5c36cb60d03b274&oe=5EF78494" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -269,16 +279,6 @@
 							<input id="moya-istoriya-xxxx" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=EZSsGa35AiQAX9vNLUP&oh=9aa4271000e0433ed1593994b10e1a0c&oe=5EC45AEC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="МОЯ ИСТОРИЯ ❤️🌱">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="ya-eshchyo-ne-zakonchila-svoyu-istoriyu-i-v-prodolzhenii" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83649310_2553776714870657_5010740970539343404_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tmutXjAww8YAX9tup0N&oh=38f4fd6d0bb11ce350cf7be523b10ca2&oe=5EFBD73E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Я ещё не закончила свою историю и в продолжении">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
