--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=pqMbmeX4tK0AX_EkRta&oh=e95d09d6e475971d07554a714d00b0ec&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=2py0zJfQ9iQAX9hWgdl&oh=7d4b30c921dbadc8335688964920ed0c&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -143,7 +143,7 @@
 								<a href="./posts/./3-sostavlyayushchie-antivirusnogo-pitaniyaxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1784</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1789</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=W-CHHv1NLyAAX_CARVS&oh=713fab182109b57d7d6834ce7adfec52&oe=5EE0F9F0" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
 									</div>
@@ -153,7 +153,7 @@
 								<a href="./posts/./kak-spravit-sya-so-streptokokkom.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1601</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1609</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=rf9DPIDPCeQAX_fKzyX&oh=3c9db2f3a6015d893bcc75e64827eb7d&oe=5ECB60A6" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
 									</div>
@@ -163,9 +163,9 @@
 								<a href="./posts/./kak-podnyat--vitamin-d.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1357</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1361</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=VAEn8uG45j0AX-cT9KJ&oh=5b3530434cc56337886c6a473678e464&oe=5EFCC084" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=DLV1DjiOWAwAX_ANeQX&oh=d5436c802253a0cc6cf6f5bb7d0de6d4&oe=5EFCC084" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
 									</div>
 									<div class="article-more__item-name" style="
 ">КАК ПОДНЯТЬ ВИТАМИН Д?</div>
@@ -173,27 +173,17 @@
 								<a href="./posts/./superbakteriya-streptokokk.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1297</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1299</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=axhO1KpzMX8AX_xNbaL&oh=6ad6c878968ea2ad8258745f41bf36d1&oe=5EC3F524" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
 									</div>
 									<div class="article-more__item-name" style="
 ">СУПЕРБАКТЕРИЯ СТРЕПТОКОКК</div>
 								</a>
-								<a href="./posts/./chto-zhe-bylo-s-moey-kozhey.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1243</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=0pJXyKQQVUYAX9D0nHg&oh=a9eac7d82fbe308a1f33202b502a8f70&oe=5EFD6FD8" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
-									</div>
-									<div class="article-more__item-name" style="
-">ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?</div>
-								</a>
 								<a href="./posts/./klubnichno-bananovyy-khleb-xx-xx--bez-glyutenax-bez-moloka.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1086</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1114</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82956709_654108152080541_3763206715448258090_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=K0G-ojw1q8QAX9WrbOE&oh=99ae25c2e20ab96ed043585b0f4808e1&oe=5ECBF342" alt="КЛУБНИЧНО-БАНАНОВЫЙ ХЛЕБ 🍓 🍌| БЕЗ ГЛЮТЕНА, БЕЗ МОЛОКА,">
 									</div>
@@ -203,17 +193,27 @@
 								<a href="./posts/./zhivaya-vodaxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>946</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>949</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83421784_196495281407389_8308008412092407527_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=1IJQb6gHFTEAX96frGq&oh=62ef3df3bb63070af8d8af072afcebdf&oe=5EE33A3F" alt="ЖИВАЯ ВОДА ☔️">
 									</div>
 									<div class="article-more__item-name" style="
 ">ЖИВАЯ ВОДА ☔️</div>
 								</a>
+								<a href="./posts/./pishchevye-drozhzhi-x-nutritional.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>864</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84347677_2665354757084113_8900968863076313356_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=3I1CUnfVB1gAX_RyHhn&oh=4d6e9ae33c45bb3e63cfbc46e91e887d&oe=5EC82015" alt="ПИЩЕВЫЕ ДРОЖЖИ / NUTRITIONAL">
+									</div>
+									<div class="article-more__item-name" style="
+">ПИЩЕВЫЕ ДРОЖЖИ / NUTRITIONAL</div>
+								</a>
 								<a href="./posts/./shchadyashchee-ochishchenie-pecheni.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>841</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>845</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82794700_489372655346938_5764641459344035352_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=eH7uliUQP_EAX-f0mza&oh=8396a0c2efe1f53121a1f803e8b2ec73&oe=5EF936B2" alt="ЩАДЯЩЕЕ ОЧИЩЕНИЕ ПЕЧЕНИ">
 									</div>
